--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   font-family: Helvetica,Arial,'sans-serif';
+  background: #352f2f;
 }
